# benford-analyzer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  go.mod  main.go  main_test.go  package.json  pyproject.toml  quickstart.sh
.env/: README.md
.runtime/: session_id
benford_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/api/: main.py  routes.py
src/core/: __init__.py
src/engine/: analyzer.py  verdict.py
src/static/: script.js  style.css
src/templates/: index.html
tests/: conftest.py  test_analyzer.py  test_api.py  test_core.py  test_verdict.py
